@@ -1,3 +1,8 @@
+2013-05-19  Jan Nijtmans  <nijtmans@users.sf.net>
+
+	* unix/tcl.m4:     Fix for FreeBSD, and remove support for older
+	* unix/configure:  FreeBSD versions. Patch by Pietro Cerutti.
+
 2013-03-13  Jan Nijtmans  <nijtmans@users.sf.net>
 
 	* unix/tcl.m4: Patch by Andrew Shadura, providing better support for
